# news-ingestion-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azertag_backfill.sh  docker-compose.yml  historical_backfill.sh  historical_status.sh  main.py  pyproject.toml  run.sh  telegram_backfill.sh  telegram_live.sh
data/backfill_state/: apa.az.json  axar.az.json  azerbaijan.az.json  azertag.az.json  islam.az.json  milli.az.json  oxu.az.json  report.az.json  sonxeber.az.json  yenixeber.az.json
scripts/: migrate_data.sh
sonxeber_scraper/: __init__.py  __main__.py  apa_client.py  axar_client.py  azerbaijan_az_client.py  azertag_client.py  azxeber_client.py  backfill.py  cli.py  client.py  config.py  db.py  historical_backfill.py  ikisahil_client.py  iqtisadiyyat_client.py  islam_client.py  islamazeri_client.py  metbuat_client.py  milli_client.py  models.py  one_news_client.py  oxu_client.py  process_control.py  report_client.py  service.py  sia_client.py  siyasetinfo_client.py  source_locks.py  sources.py  teleqraf_client.py  utils.py  xeberler_client.py  yeniazerbaycan_client.py  yenixeber_client.py
src/news_ingestor/: __init__.py  cli.py  logging.py  schemas.py  settings.py
src/news_ingestor/control/: __init__.py  api.py
src/news_ingestor/db/: __init__.py  base.py  models.py  repository.py  schema.py  session.py
src/news_ingestor/services/: __init__.py  audit.py  checkpoints.py  dedup.py  normalizer.py  runtime_state.py  telegram_backfill_state.py
tests/: test_source_locks.py  test_telegram_worker.py  test_utils.py
(+12 files in other folders)
